syntax = "proto3";
// @version: 2.0.0
// package gia;

message Root {
  GraphUnit          graph        = 1; // graph info
  repeated GraphUnit accessories  = 2; // data_structure, input/output
  string             file_path    = 3; // {UID}-{TIME}-{LEVEL_ID}-\{FILE_NAME}.gia
  string             game_version = 5; // 6.2.0 by now
}

message GraphUnit {
  enum Which {
    Unknown                  = 0;
    EntityNode               = 9;
    BooleanFilter            = 10;
    Skills                   = 11;
    CompositeGraph           = 12;
    StatusNode               = 22;
    ClassNode                = 23;
    StructureDefinition      = 29;
    LevelStructureDefinition = 37;
    ItemNode                 = 46;
    IntegerFilter            = 47;
  };

  GlobalIdentifier          id         = 1; // Self id
  repeated GlobalIdentifier relatedIds = 2; // Some related accompanying units(If exist)
  string                    name       = 3; // Node Graph Name
  Which                     which      = 5; // Enumeration of Node Graph Type

  oneof graphType {
    NodeGraphWrapper    graph        = 13; // Else
    CompositeDefWrapper compositeDef = 14; // When type is Composite Graphs
    StructureDefWrapper structureDef = 22; // When type is Structure Definitions
  }
}

message NodeGraphWrapper {
  message InnerWrapper { NodeGraph graph = 1; }
  InnerWrapper inner = 1;
}

message CompositeDefWrapper {
  message InnerWrapper { CompositeDef def = 1; }
  InnerWrapper inner = 1;
}

message NodeGraph {
  GlobalIdentifier id   = 1; // graph id (types, id)
  string           name = 2; // Graph Name

  repeated NodeInstance     nodes         = 3;
  repeated CompositePin     compositePins = 4;
  repeated Comments         comments      = 5;
  repeated GraphVariable    graphValues   = 6;
  repeated GraphAffiliation affiliations  = 7;

  optional int32 xxx_exposed_pin_index = 100; // always 1, not sure what it is
  optional float xxxx                  = 101; // 0.3 for Bool/Int Filter, or 0x3e99999a
}

message Comments {
  string         content = 1;
  optional float x       = 2;
  optional float y       = 3;
}

message GraphAffiliation {
  message Info {
    GlobalIdentifier source        = 1;
    int32            typeXxx       = 2;
    int32            alwaysOneXxxx = 3;
    oneof extend { VarBase.ItemType.StructItem structId = 100; }
  }
  Info info = 1;
  message Type { int32 type = 1; }
  Type type = 2;
  // TODO
}

message StructureDefWrapper {
  message StructureDef {
    Field genericField  = 1;
    Field concreteField = 2; // same as 1
    int32 structVersion = 3; // Version Updated as structure is modified and as
                             // other structures modified
    int32 itemCount = 4; // item count
  }
  message Field {
    int64           id   = 1;
    int64           xxx  = 2; // 2 for level stru def
    repeated VarDef vars = 3;

    string structName = 501;
    int32  classBase  = 502; // always 1
    int32  index      = 503; // same as StructureDef
  }
  message VarDef {
    message SubType {
      VarType type      = 1;
      string  xxxx_desc = 2; // What are they?
      VarType key       = 502;
      VarType value     = 503;
      int64   valueId   = 504;
    }
    message TypeDef {
      VarType type    = 1;
      SubType subType = 2;

      oneof val {
        IntBaseValue    intVal  = 13;
        EnumBaseValue   boolVal = 14;
        StringBaseValue strVal  = 16;
        // TODO: What A mess here! I can't bear anymore!!!!!
        // He who trust himself could take a try.
        // ESPECIALLY MAP/STRUCT BASE
      }
    }
    TypeDef typedef1 = 1;
    TypeDef typedef3 = 3;
    string  name     = 5;

    string  varName  = 501;
    VarType varType  = 502;
    int32   varIndex = 503; // variable index
  }
  StructureDef def = 1;
}

// ========== Begin of Variable Defs ========== //
enum VarType {
  UnknownVar       = 0;
  Entity           = 1;
  GUID             = 2;
  Integer          = 3;
  Boolean          = 4;
  Float            = 5;
  String           = 6;
  GUIDList         = 7;
  IntegerList      = 8;
  BooleanList      = 9;
  FloatList        = 10;
  StringList       = 11;
  Vector           = 12;
  EntityList       = 13;
  EnumItem         = 14;
  VectorList       = 15;
  LocalVariableRef = 16;
  Faction          = 17;
  EnumList         = 18;
  reserved 19;
  Configuration       = 20;
  Prefab              = 21;
  ConfigurationList   = 22;
  PrefabList          = 23;
  FactionList         = 24;
  Struct              = 25;
  StructList          = 26;
  Dictionary          = 27;
  VariableSnapshotRef = 28;

  // EnumTypes 10001.....
  reserved 10000 to 10099;   // server enum types
  reserved 210000 to 210099; // client enum types
}

enum ClientVarType {
  UnknownVar_        = 0;
  Entity_            = 1; // type: Ety, typeid: 1
  EntityList_        = 2; // type: L<Ety>, typeid: 2
  Integer_           = 3; // type: Int, typeid: 3
  IntegerList_       = 4; // type: L<Int>, typeid: 4
  Boolean_           = 5; // type: Bol, typeid: 5
  BooleanList_       = 6; // type: L<Bol>, typeid: 6
  Float_             = 7; // type: Flt, typeid: 7
  FloatList_         = 8; // type: L<Flt>, typeid: 8
  String_            = 9; // type: Str, typeid: 9
  StringList_        = 10; // type: L<Str>, typeid: 10
  Vector_            = 11; // type: Vec, typeid: 11
  VectorList_        = 12; // type: L<Vec>, typeid: 12
  EnumItem_          = 13; // type: E<Unk>, typeid: 13
  GUID_              = 14; // type: Gid, typeid: 14
  GUIDList_          = 15; // type: L<Gid>, typeid: 15
  Faction_           = 16; // type: Fct, typeid: 16
  EnumList_          = 17; // type: L<E<Unk>>, typeid: 17
  Configuration_     = 18; // type: Cfg, typeid: 18
  Prefab_            = 19; // type: Pfb, typeid: 19
  ConfigurationList_ = 20; // type: L<Cfg>, typeid: 20
}

message GraphVariable {
  string  name      = 2;
  VarType type      = 3;
  VarBase values    = 4;
  bool    exposed   = 5; // Expose vars out of node graph?
  int64   structId  = 6; // Only in struct, otherwise 0
  VarType keyType   = 7; // ? Simple type also have this field (=6)
  VarType valueType = 8; // ? (=6)
}

message VarBase {
  enum Class {
    Unknown      = 0;
    IdBase       = 1;
    IntBase      = 2;
    SelectorBase = 3; // (But how to set options?)
    FloatBase    = 4;
    StringBase   = 5;
    EnumBase     = 6;
    VectorBase   = 7;

    ConcreteBase = 10000; // reflective pins
    StructBase   = 10001;
    ArrayBase    = 10002;
    MapBase      = 10003;

    MapPair = 10007;
  }
  message ItemType {
    message StructItem { int64 structId = 1; }
    message PairItems {
      VarType        key      = 1;
      VarType        value    = 2;
      optional int64 structId = 3; // only when value is struct
    }
    message ClientType {
      ClientVarType type = 2; // 不是, 怎么类型枚举都不一样. 想死了
    }
    message ServerType {
      enum Kind {
        Normal = 0;
        Struct = 1;
        Pair   = 2;
      }
      VarType type = 1;
      Kind    kind = 2;
      oneof id {
        StructItem item  = 100;
        PairItems  items = 101;
      }
    }
    enum ClassBase {
      Unknown = 0;
      Server  = 1;
      Client  = 2;
    }
    ClassBase classBase = 1;
    oneof class {
      ServerType type_server = 100;
      ClientType type_client = 101;
    }
  }
  message StructInfo {
    // TODO: What is this
    message Inner { int32 xxx = 1; }
    int32 xxx   = 1;
    Inner inner = 100;
  }

  Class             class         = 1;
  bool              alreadySetVal = 2;
  optional ItemType itemType      = 4;
  // Only Struct contains this field
  optional StructInfo structInfo = 5;

  // decided by class, id = class + 100, except Struct/Array/Map
  oneof baseValues {
    IdBaseValue       bId            = 101;
    IntBaseValue      bInt           = 102;
    FloatBaseValue    bFloat         = 104;
    StringBaseValue   bString        = 105;
    EnumBaseValue     bEnum          = 106;
    VectorBaseValue   bVector        = 107;
    StructBaseValue   bStruct        = 108;
    ArrayBaseValue    bArray         = 109;
    ConcreteBaseValue bConcreteValue = 110;
    MapPairBaseValue  bMapPair       = 111;
    MapBaseValue      bMap           = 112;
  }
}

message IdBaseValue { int32 val = 1; }

message IntBaseValue { int32 val = 1; }

message FloatBaseValue { float val = 1; }

message StringBaseValue { string val = 1; }

message EnumBaseValue { int32 val = 1; } // enum.ts/EnumNode_Value

message VectorBaseValue {
  message Vec {
    float x = 1;
    float y = 2;
    float z = 3;
  }
  Vec val = 1;
}

message StructBaseValue { repeated VarBase items = 1; }

message ArrayBaseValue { repeated VarBase entries = 1; }

message MapBaseValue {
  // map pairs should be of Class MapPair
  repeated VarBase mapPairs = 1;
}

message MapPairBaseValue {
  VarBase key   = 1;
  VarBase value = 2;
}

message ConcreteBaseValue {
  // index of concrete node types
  // e.g. EnumNode.EnumEqualList
  int32                       indexOfConcrete = 1;
  VarBase                     value           = 2;
  optional ComplexValueStruct structs         = 5;
}

message ComplexValueStruct { // Map KV, Array Item, Struct Item
  message Base { Wrapper wrapper = 1; }
  message Wrapper {
    VarBase.Class class = 1;
    oneof type {
      VarBase.ItemType.StructItem item    = 100;
      VarBase.ItemType.PairItems  mapPair = 102;
    }
  }
  int32 class = 4;
  Base  inner = 100;
}
// ========== End of Variable Defs ========== //

// ========== Below are Messages that has been refracted ========== //

// 通用资源标识符 (原 GlobalIdentifier, NodeProperty 等)
// 这是整个系统中"资源的身份证"
message GlobalIdentifier {
  enum Origin {
    UNKNOWN_CLASS  = 0;
    USER_DEFINED   = 10000; // 用户资产
    SYSTEM_DEFINED = 10001; // 系统内置
  }

  enum Category {
    UNKNOWN_TYPE = 0;

    // 资产类型
    FILTER_NODE_GRAPH     = 1; // Such as boolean filter
    BASIC_NODE_GRAPH      = 5; // Such as graph node
    AFFILIATED_NODE_GRAPH = 23; // Assembly/Split for Structure

    // Server Side Node Types
    SERVER_BASIC  = 20000;
    SERVER_STATUS = 20003;
    SERVER_CLASS  = 20004;
    SERVER_ITEM   = 20005;

    // Client Side Node Types
    CLIENT_FILTER     = 20001; // 筛选器类型(默认 Bool)
    CLIENT_SKILL      = 20002; // 技能节点图流程(客户端)
    CLIENT_INT_FILTER = 20006; // 整数筛选器类型
  }

  enum AssetKind {
    // 资产类型
    SERVER_NODE_GRAPH     = 0;
    CLIENT_NODE_GRAPH     = 3;
    STRUCTURE_DECLARATION = 15;

    // 节点图类型
    CUSTOM_GRAPH    = 21001; // NodeGraph
    COMPOSITE_GRAPH = 21002; // CompositeGraph

    // 节点类型
    SYS_CALL_STUB  = 22000; // SysCall (Kernel 2000/2001 等)
    GENERATED_STUB = 22001; // SysGraph (Struct/Signal 定义生成的节点)
  }

  Origin    origin   = 1;
  Category  category = 2;
  AssetKind kind     = 3;

  // ====== Optional ======
  int64 graph_id = 4; // 资源所属图 ID
  int64 uid      = 5; // 全局唯一 ID
}

// 复合节点定义
message CompositeDef {
  // 复合节点的身份标识
  message Signature {
    GlobalIdentifier shell_ref  = 1;
    GlobalIdentifier kernel_ref = 2; // 这种生成的节点通常 shell == kernel

    // 关键：对于用户子图，指向内部逻辑图；对于系统生成节点，此字段为空
    GlobalIdentifier graph_ref      = 4;
    optional int32   signal_version = 5;
  }

  // 参数/数据引脚定义
  message DataPinDef {
    string       name            = 1;
    int32        visibility_mask = 2; // 原 xxxx_always_1 (位掩码)
    PinSignature sig             = 3; // 包含 Kind (IN_PARAM/OUT_PARAM) 和 Index

    //
    message TypeInfo {
      VarBase.Class ui_class        = 1; // UI表现形式 (IntBase, VecBase等)
      VarType       var_type_shell  = 3; // VarType 枚举, 对于 Enum, 为 [100id](EnumCategoryId)
      VarType       var_type_kernel = 4; // VarType 枚举, 对于 Enum, 为 14(EnumType)

      // 元数据引脚特有的显示状态 (如显示为信号名称输入框)
      message DisplayState {
        enum State { NONE = 0; SIGNAL_NAME = 4; }
        State state = 1;
      }
      optional DisplayState display_state = 7;

      oneof detail {
        EnumId   enum_id        = 101;
        ListType list_item_type = 102;
        StructId struct_id      = 104;
        MapType  map_type       = 105;
      }

      message EnumId { int64 val = 1; }
      message ListType {
        TypeInfo item_type = 1;
      }
      message StructId { int64 val = 2; }
      message MapType {
        VarType key   = 3;
        VarType value = 4;
      }
    }

    TypeInfo type = 4;
    // 如果是系统生成的结构体/信号节点，标记其元数据类型
    optional PinSignature meta_sig_type      = 5;
    int32                 persistent_pin_uid = 8;
  }

  // 流程引脚定义
  message FlowPinDef {
    string       name               = 1;
    int32        visibility_mask    = 2;
    PinSignature sig                = 3;
    string       description        = 4;
    int32        persistent_pin_uid = 8;
  }

  // 实现模板定义
  message Implementation {
    enum Category {
      UNKNOWN       = 0;
      COMPOSITE     = 1000; // 用户子图
      SEND_SIGNAL   = 1001; // 发送信号
      LISTEN_SIGNAL = 1002; // 监听信号
      STRUCT_SPLIT  = 1004; // 拆分结构体
      STRUCT_MODIFY = 1005; // 修改结构体
    }
    Category category = 1;

    message Id { int64 id = 1; }
    message SignalBinding {
      string           signal_name    = 1;
      GlobalIdentifier server_node_id = 2;
      GlobalIdentifier client_node_id = 3;
    }

    oneof template {
      // 对应 Send/Listen 的信号信息
      SignalBinding send_signal   = 101;
      SignalBinding listen_signal = 102;
      // 对应 Assembly/Split 的结构体 ID
      Id assemble_struct = 104;
      Id split_struct    = 105;
      Id modify_struct   = 106;
    }
  }

  Signature id = 4;

  repeated FlowPinDef inflows   = 100;
  repeated FlowPinDef outflows  = 101;
  repeated DataPinDef inputs    = 102;
  repeated DataPinDef outputs   = 103;
  repeated DataPinDef meta_pins = 106; // 原 signals，存放 Type 5 引脚

  Implementation impl = 107;

// 这里的 Which 逻辑建议保留原本命名，因为它们是模板系统的索引
  enum TemplateRoot {
    UNKNOWN        = 0;
    SUB_TEMPLATE   = 1;
    LISTEN_SIGNAL  = 2;
    STRUCT         = 5;
    USER_COMPOSITE = 6;
  }
  enum TemplateSub  {
    NONE          = 0;
    MODIFY_STRUCT = 3;
    STRUCT_SUB    = 4;
    SIGNAL_SUB    = 8;
  }

  string       name          = 200;
  string       description   = 201;
  TemplateRoot template_root = 203; // 原 which
  TemplateSub  template_sub  = 204; // 原 subWhich
}

// 节点图中单个节点实例
message NodeInstance {
  // 节点在图中的唯一索引 (运行时句柄)
  int32 index = 1;

  // 核心定义与实现分离

  // 外壳定义(UI): shell_ref: 决定节点长什么样
  GlobalIdentifier shell_ref = 2;

  // 内核实现(Logic): kernel_ref : 决定节点怎么跑
  // - 对于固定节点: 始终有值。
  // - 对于可变节点:
  //    - 若为 null: 表示"未决议" (Unresolved)。节点处于未配置类型的无效状态。
  //    - 若有值: 表示已根据用户选择的类型，映射到了具体的内核函数 ID。
  // - 对于 Client Skill 入口 (Start): 通常为 Kernel 2001。(Listen)
  // - 对于 Client Skill 执行节点 (Execution): 通常为 Kernel 2000。(POST)
  optional GlobalIdentifier kernel_ref = 3;

  // 引脚与参数
  repeated PinInstance pins = 4;

  float x_pos = 5;
  float y_pos = 6;

  // 附加在节点上的用户备注
  optional Comments attached_comment = 7;

  // 特殊上下文标记 (Legacy / Context Provider)

  // 仅出现在入口节点 (NodeGraphStarts, Kernel 2001)
  // 标识该图被触发时的上下文类型 (如 Signal)。
  // 实际是一个无索引的 PinSignature
  optional PinSignature context_declaration = 8;

  // 仅用于 Signal 相关节点，用于检测定义版本冲突
  optional int32 signal_version = 9;

  // 结构体依赖声明
  repeated GlobalIdentifier using_structs = 10;
}

message PinSignature {
  enum Kind {
    UNKNOWN   = 0;
    IN_FLOW   = 1;
    OUT_FLOW  = 2;
    IN_PARAM  = 3;
    OUT_PARAM = 4;

    // 特殊用途
    META_RPC_OPCODE = 5; // 原 SignalClient. 携带 RPC ID
    META_TOPIC_NAME = 6; // 原 Signal (Entry Context). 携带信号名称/Context声明

    // 结构体操作
    STRUCT_REF        = 13;
    STRUCT_KEY_MOD    = 14;
    STRUCT_KEY_SET    = 15;
    STRUCT_KEY_SELECT = 16;
  }
  Kind  kind  = 1;
  int32 index = 2; // 第几个该类型的引脚

  // 当 kind 为 META_RPC_OPCODE (5) 时存储 RPC ID
  message SignalId { int64 id = 1; }
  optional SignalId source_ref = 100;
}

message PinInstance {

  // 双重索引系统
  PinSignature shell_sig  = 1; // i1: 对应 Shell 定义的 UI 槽位
  PinSignature kernel_sig = 2; // i2: 对应 Kernel 实现的 参数 槽位

  // 值与类型
  VarBase value = 3;
  int32   type  = 4; // Be careful! VarType in Server and ClientVarType in Client

  // 连接关系
  repeated NodeConnection connections = 5;

  // 动态绑定信息

  // 元数据绑定
  // 用于 SendSignal 等节点，存储 RPC ID 或 Topic Name 的绑定关系
  // 原 signalPin
  optional PinSignature binding_meta = 6;

  // 持久化引脚 ID
  // 仅用于动态类型 (Struct/Signal/Composite)
  // 当 Shell 定义发生变更(插队/重排)时，通过此 ID 找回连线关系
  optional int32 persistent_pin_uid = 7; // 原 compositePinUid
}

message NodeConnection {
  int32        target_node_index = 1;
  PinSignature target_pin_shell  = 2;
  PinSignature target_pin_kernel = 3;
}

message CompositePin {
  // 对外接口
  PinSignature shell_sig = 1;
  // 对内连线
  int32        target_node_index = 2;
  PinSignature target_pin_shell  = 3;
  PinSignature target_pin_kernel = 4;
}
